fdo#84229 - don't set error when seeking beyond end of valid data.

XclImpStream and elsewhere does an initial seek to the end, then a
tell to work out the true length of the stream. In order to let us
attempt to rescue data from the beginning of otherwise corrupt /
truncated streams, we should avoid setting an error here.

Interestingly, we also (probably) don't want to return the true length
of the valid data - as this is how SotStorage has worked historically.

Change-Id: Ie0ff0e183220b81871ae3bf83980a24b57ac8694